Closed Bug 554764 Opened 16 years ago Closed 16 years ago

Dynamically removing glass appearance causes the window to stop redrawing

Categories

(Core :: Widget: Win32, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a4
Tracking Status
blocking2.0 --- beta1+

People

(Reporter: rflint, Assigned: robarnold)

References

Details

Attachments

(2 files, 1 obsolete file)

With the patch for bug 546259 applied, dynamically removing the -moz-win-glass appearance causes the window to stop redrawing and causes all mouse events to pass though to whatever is underneath. Mousing over a persona on getpersonas.com is a handy way to reproduce this.
blocking2.0: --- → ?
This is very strange. The window completely disappears from alt-tab too.
Yeah - just hit this on Vista as well, but I could mostly restore things by clicking on the taskbar entry to give it focus again. This'll be a pain for dogfooding the 1.9.3 alphas but I don't think we should let it slip into a beta. Marking blocking1.9.3:beta1+
blocking2.0: ? → beta1+
I don't think I'd be happy to ship this in an alpha, even. It's a pretty bad failure mode, and it's not at all obvious how to recover from it. FWIW, I attached a debugger, and nothing interesting was going on in the process, it was just spinning the message loop.
Attached patch workaroundSplinter Review
Attachment #435404 - Flags: review?(rflint)
We have to change the window style for transparent windows but not for opaque/glass windows. For some reason this is upsetting the window manager even though the style hasn't changed.
Assignee: nobody → tellrob
Status: NEW → ASSIGNED
Attachment #435522 - Flags: review?(jmathies)
I think my previous patch may have broken transparent windows transitions. After some more debugging, the problem because obvious - I don't know how this code worked before as well as it did. I also am not sure why the bug manifested as it did.
Attachment #435522 - Attachment is obsolete: true
Attachment #435527 - Flags: review?(jmathies)
Attachment #435522 - Flags: review?(jmathies)
Attachment #435404 - Flags: review?(rflint)
Attachment #435527 - Flags: review?(jmathies) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a4
With this patch the transparency of the 'All Tabs' has been restored, but when tabbing through the tabs, the outline is just a dotted line. Used to be a solid dark/black border. I don't see any 'Glass' effect on the Find-bar when opened with Ctrl+F Tested using cset: http://hg.mozilla.org/mozilla-central/rev/26be64ca9977
Target Milestone: mozilla1.9.3a4 → ---
(In reply to comment #9) > I don't see any 'Glass' effect on the Find-bar when opened with Ctrl+F Glass on the find bar was removed by bug 555477.
Target Milestone: --- → mozilla1.9.3a4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: