Bug 554764 - Dynamically removing glass appearance causes the window to stop redrawing r=jimm